# another-circuit

./: Cargo.toml  calldata.txt  deployment_code.txt  yul_code.txt
deploy-test/: package-lock.json  package.json
deploy-test/scripts/: deploy.ts
src/: lib.rs
src/chips_factory/: arithmetic_chip.rs  goldilocks_chip.rs  mod.rs  mod_chip.rs  one_chip.rs  range_check.rs  range_chip.rs
src/snark/: mod.rs  test_arithmetic_contract.rs  test_contract_size.rs  test_goldilocks_contract.rs  test_linear_contract.rs  test_mod_contract.rs  test_range_chip_contract.rs  verifier_api.rs  verifier_circuit.rs
src/snark/chip/: fri_chip.rs  goldilocks_chip.rs  goldilocks_extension_chip.rs  hasher_chip.rs  merkle_proof_chip.rs  mod.rs  transcript_chip.rs
src/snark/chip/native_chip/: arithmetic_chip.rs  linear_chip.rs  mod.rs  mod_chip.rs  poseidon_chip.rs  poseidon_constants.rs  utils.rs
src/snark/chip/plonk/: plonk_verifier_chip.rs
src/snark/chip/plonk/gates/: arithmetic.rs  arithmetic_extension.rs  base_sum.rs  constant.rs  gate_test.rs  mod.rs  multiplication_extension.rs  noop.rs  poseidon.rs  poseidon_mds.rs  public_input.rs  random_access.rs  reducing.rs  reducing_extension.rs
