[package]
name = "another-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2={git="https://github.com/kbizikav/plonky2"}
anyhow = "1.0.56"   
lazy_static = "1.4.0"
halo2curves = { git = "https://github.com/DoHoonKim8/halo2curves.git" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["dev-graph"], tag = "v2023_02_02" }
halo2wrong_transcript = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "transcript", tag = "v2023_02_02" }
halo2wrong_maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "maingate", tag = "v2023_02_02" }
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", package = "halo2wrong", tag = "v2023_02_02" }
itertools = "0.11"
poseidon = { git = 'https://github.com/DoHoonKim8/poseidon.git' }
rand = "0.8"
subtle = "2.4"
num-integer = "0.1"
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git", tag = "v2023_02_02" }
colored = "2.0.0"
halo2_kzg_srs = { git = "https://github.com/han0110/halo2-kzg-srs" }
rayon = "1.5.3"
hex = "0.4.3"
derive_more = "0.99.17"
num = { version = "0.4", default-features = false, features = ["rand"] }

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs={path="../halo2/halo2_proofs"}

[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
halo2wrong={path="../halo2wrong/halo2wrong"}
maingate={path="../halo2wrong/maingate"}

[patch."https://github.com/kbizikav/plonky2"]
plonky2={path="../plonky2/plonky2"}
